--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,9 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div id="content" class="content">
+        <h1>Hello World</h1>
+    </div>
     <script src="./js/client.js"></script>
 </body>
 </html>
